# NARust-158

./: .gitignore  .markdownlint.json  Cargo.toml  LICENSE-MIT  README.en.md  README.md  README.zh-CN.md  TranslatedTerms.md  rustfmt.toml  译名列表.md
.github/workflows/: ci.yml  coverage.yml
docs/test_results/: group_result-20240820000245.csv
notes/: NAL-6 communicative findSubstitute.nal
src/: _to_string.rs  global.rs  lib.rs  parameters.rs  symbols.rs
src/control/: concept_linking.rs  mod.rs  parameters.rs
src/entity/: budget.rs  budget_value.rs  concept.rs  item.rs  judgement.rs  judgement_v1.rs  mod.rs  question.rs  question_v1.rs  sentence.rs  sentence_v1.rs  short_float.rs  stamp.rs  task.rs  task_link.rs  term_link.rs  truth_value.rs
src/inference/: _concept_process.rs  _derivation_context.rs  _memory_process.rs  budget_functions.rs  budget_inference.rs  compositional_rules.rs  derivation_context.rs  evidence_real.rs  local_inference.rs  local_rules.rs  mod.rs  reason_context.rs  rule_tables.rs  structural_rules.rs  syllogistic_rules.rs  truth_functions.rs  utility_functions.rs  variable_inference.rs
src/io/: _channel.rs  input_channel.rs  mod.rs  output_channel.rs  symbols.rs
src/language/: mod.rs  term_v1.rs  term_v2.rs  term_v3.rs  term_v4.rs
src/nars/: mod.rs  parameters.rs  reasoner.rs
src/storage/: bag.rs  buffer.rs  concept_bag.rs  distributor.rs  event_buffer.rs  memory.rs  mod.rs  novel_task_bag.rs  rank_table.rs  task_buffer.rs  task_link_bag.rs  term_link_bag.rs
src/types/: mod.rs  type_context.rs
src/util/: average.rs  impl_once.rs  (+7 more)
(+191 files in other folders)
