[package]
name = "narust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.59"

[dependencies.nar_dev_utils]
version = "0"
features = ["bundled"]

# Narsese支持：API、枚举Narsese & 词法Narsese
[dependencies.narsese]
version = "0"
features = [
    "enum_narsese",
    "lexical_narsese",
]

# NAVM：统IO模型
[dependencies.navm]
version = "0"
features = ["bundled"]
